# scod

./: Cargo.toml  TO-DO.md  build.sh  frontend.sh  package-lock.json  rust.sh  shell.md
crates/core/: Cargo.toml
crates/core/src/: alias.rs  client.rs  lib.rs  message.rs
crates/webview/: Cargo.toml
crates/webview/src/: app.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: buffer.ts  config.ts  editor.ts  language.ts  local_message.ts  main.ts  man.ts  message_type.ts  meta.ts  night-owl.json  old_editor.ts  style.css  util.d.ts  widget.ts
frontend/src/colorscheme/: ayu-dark.ts  theme.ts
frontend/src/plugin/: builtin.ts  plug.ts
frontend/src/widget/: command.ts  style.css
mod/fuzz/front/: package-lock.json
mod/fuzz/src/: main.rs
plugin/alias/: Cargo.toml
plugin/alias/src/: lib.rs
plugin/shell/: Cargo.toml
plugin/shell/src/: lib.rs  main.rs
src/: app.rs  main.rs
src/embed/: html.rs  js.rs
