[package]
name = "scod"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = ["crates/*", "plugin/*"]


[workspace.dependencies]
winit = "0.30.12"
scod-core = { path = "crates/core" }
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
libloading = "0.9.0"

[dependencies]
winit = "0.30.12"
wry = "0.54.1"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
shell-words = "1.1.1"
scod-core = { path = "crates/core" }
scod-webview = { path = "crates/webview" }


