[package]
name = "scod"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
winit = "0.30.12"
scod-core = { path = "crates/core" }
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"

[dependencies]
winit.workspace = true
scod-webview = { path = "crates/webview" }


